--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,6 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,4 +11,28 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.Posts {
+  background-color: #ccc;
+  padding: 0 10%;
+  height: 100vh;
+  text-align: center;
+}
+
+.Post {
+  padding: 30px 20px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+  margin: 20px 0;
+  position: relative;
+}
+
+.Post .counter {
+  position: absolute;
+  top: 22px;
+  right: 25px;
+  font-weight: bold;
+  cursor: pointer;
 }
